test/corpus/feature.txt
===
Incomplete Feature 1
===
Feature: Just a description
  A short description

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context))
      (description_helper
        (description)))))

===
Incomplete Feature 2
===
Feature: Empty feature

---

(document
  (feature
    (feature_header
      (feature_line
        (feature_kw)
        (context)))))

===
Incomplete Feature 3
===
# Just a comment
---

(document
  (comment))
