test/corpus/i18n.txt
===
I18n Emoji
===
# language: em
📚: 🙈🙉🙊

  📕: 💃
    😐🎸

---

(document
  (feature
    (feature_header
      (language
        (language_name))
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))))))

===
I18n Fr
===
#language:fr
Fonctionnalité: i18n support

  Scénario: Support des caractères spéciaux
    Soit un exemple de scénario en français
    Quand j'ai 1 gâteau
    Alors je suis heureux

  Scénario: Support du mot-clef "Etant donné que "
    Etant donné que j'aime les gâteaux
    Lorsqu'on m'offre 1 gâteau
    Alors je suis heureux

  Scénario: Support du mot-clef "Etant donné qu'"
    Etant donné qu'offrir un gâteau rend heureux
    Lorsqu'on m'offre 1 gâteau
    Alors je suis heureux

  Scénario: Support du mot-clef "Étant donné que "
    Étant donné que j'aime les gâteaux 
    Lorsqu'on m'offre 1 gâteau
    Alors je suis heureux

  Scénario: Support du mot-clef "Étant donné qu'"
    Étant donné qu'offrir un gâteau rend heureux
    Lorsqu'on m'offre 1 gâteau
    Alors je suis heureux

  Scénario: Support du mot-clef "Et que "
    Soit un exemple de scénario en français
    Lorsque j'ai 2 gâteaux
    Et que quelqu'un m'offre 1 gâteau
    Alors j'ai 3 gâteaux

  Scénario: Support du mot-clef "Et qu'"
    Soit un exemple de scénario en français
    Lorsque j'ai 2 gâteaux
    Et qu'on m'offre 1 gâteau
    Alors j'ai 3 gâteaux

  Scénario: Support du mot-clef "Et "
    Soit un exemple de scénario en français
    Quand j'ai 2 gâteaux
    Et quelqu'un m'offre 1 gâteau
    Alors j'ai 3 gâteaux

  Scénario: Support du mot-clef "Mais que "
    Soit un exemple de scénario en français
    Lorsque j'ai 2 gâteaux
    Mais que quelqu'un me vole 1 gâteau
    Alors j'ai 1 gâteau

  Scénario: Support du mot-clef "Mais qu'"
    Soit un exemple de scénario en français
    Lorsque j'ai 2 gâteaux
    Mais qu'on me vole 1 gâteau
    Alors j'ai 1 gâteau

  Scénario: Support du mot-clef "Mais "
    Soit un exemple de scénario en français
    Quand j'ai 2 gâteaux
    Mais quelqu'un me vole 1 gâteau
    Alors j'ai 1 gâteau

---

(document
  (feature
    (feature_header
      (language
        (language_name))
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context)))
          (and_step
            (and_line
              (and_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context)))
          (and_step
            (and_line
              (and_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context)))
          (and_step
            (and_line
              (and_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context)))
          (but_step
            (but_line
              (but_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context)))
          (but_step
            (but_line
              (but_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context)))
          (but_step
            (but_line
              (but_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))))

===
I18n No
===
#language:no
Egenskap: i18n support

  Scenario: Parsing many languages
    Gitt Gherkin supports many languages
    Når Norwegian keywords are parsed
    Så they should be recognized

---

(document
  (feature
    (feature_header
      (language
        (language_name))
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))
        (when_group
          (when_step
            (when_line
              (when_kw)
              (context))))
        (then_group
          (then_step
            (then_line
              (then_kw)
              (context))))))))

===
Language
===
#language:en

Feature: Explicit language specification

  Scenario: minimalistic
    Given the minimalism

---

(document
  (feature
    (feature_header
      (language
        (language_name))
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))))))

===
Spaces In Language
===
  #  language  :   en-lol
OH HAI: STUFFING

---

(document
  (feature
    (feature_header
      (language
        (language_name))
      (feature_line
        (feature_kw)
        (context)))))

===
Invalid Language
===
#language:no-such

Feature: Minimal

  Scenario: minimalistic
    Given the minimalism

---

(document
  (feature
    (feature_header
      (language
        (invalid_language_name))
      (feature_line
        (feature_kw)
        (context)))
    (scenario_definition
      (scenario
        (scenario_line
          (scenario_kw)
          (context))
        (given_group
          (given_step
            (given_line
              (given_kw)
              (context))))))))
